--- a/promptly/app/globals.css
+++ b/promptly/app/globals.css
@@ -1,3 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes moveUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-14px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes float {
+  0% { transform: translateY(0px); }
+  50% { transform: translateY(-20px); }
+  100% { transform: translateY(0px); }
+}
+
+.animate-float {
+  animation: float 6s ease-in-out infinite;
+}
+
+.moveUpDown {
+  animation: moveUpDown 3s infinite;
+  rotate: 180deg;
+}
+
+.hero {
+  background-image: linear-gradient(
+    to bottom,
+    rgba(253, 253, 253, 0.5),
+    rgba(4, 0, 213, 0.5) 75%
+  );
+}
+
+.hero2 {
+  background-image: linear-gradient(
+    to bottom,
+    rgba(253, 253, 253, 0.949),
+    rgba(96, 135, 250, 0.5) 100%
+  );
+}
